BEEBEEP (Secure Lan Messanger)

BeeBEEP 3.0.1
- Workgroups
- Accept connections only from workgroups (option)
- Recently used User Status can be selected
- Drop or paste images on the message box
- Set background color as status for users in list (option)

BeeBEEP 3.0.0
- Fixed issue with "This app is preventing shutdown" in Windows
- Removing a group action will delete also the chat with the group members
- Zero Configuration Networking option added
- Floating chats
- Esc key minimize the active window 

BeeBEEP 2.0.4
- Some GUI improvements (new icons, file sharing tree load faster)
- Always Beep on new message arrived (option)
- Favorite users (right click on user and enable star button, save users option must be enabled) is on top of the list
- improved group usability
- Offline users can be removed from list (right click on an offline user in list and then remove)
- Clear all files shared (option)
- Load minimized at startup (option)
- Prompt on close event when connected (option)
- Open your data folder (option)
- The "chat with all" background color can be changed

BeeBEEP 2.0.3
- Fixed shared folder tree

BeeBEEP 2.0.2
- Fixed a bug in "open url" function

BeeBEEP 2.0.1
- Fixed icon problem in Linux system tray 

BeeBEEP 2.0.0
- Updated to Qt Library 5.4.2 (for unicode emojis but it will be more than doubled the package size)
- Users can be saved on exit
- Offline messages
- Send file and folder by drag and drop in a chat
- Message box can be resized
- Show only last [num] messages (increase the usability)
- Reset windows geometry to default at startup option
- New emoticons interface (emojis)
- Escape key will minimize BeeBEEP into the system tray (option)
- DataFolderPath and AddAccountNameToDataFolder option in RC file
- ConfirmOnDownloadFile option added
- Disable notification for group option added in group menu (right click on list)
- User online/offline status notification in tray
- Chat can be saved in pdf format